--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
-  font-family: "Times New Roman", Times, serif;
+  font-family: "DM Sans", sans-serif;
+}
+.alt-text {
+  font-family: "Fira Sans", sans-serif;
 }
