--- a/src/styles/TestCard.css
+++ b/src/styles/TestCard.css
@@ -1,4 +1,4 @@
-.task-card {
+/* .task-card {
   margin: 10px;
   padding: 10px;
 }
@@ -29,7 +29,7 @@
 
 .card-div {
   border-radius: 6px 6px 0 0;
-  background-color: white;
+
   display: flex;
   flex-direction: column;
   padding-left: 5px;
@@ -41,7 +41,7 @@
   justify-content: flex-end;
   gap: 5px;
   border-radius: 0 0 4px 4px;
-  background-color: white;
+
   margin-top: 8px;
   height: 60px;
   padding-right: 5px;
@@ -49,4 +49,4 @@
 
 .due-date {
   color: red;
-}
+} */
