--- a/src/styles/boardPage.css
+++ b/src/styles/boardPage.css
@@ -1,4 +1,4 @@
-.board-container {
+/* .board-container {
   margin-top: 20px;
   display: flex;
   flex-direction: row;
@@ -44,4 +44,4 @@
 
 .task-card {
   margin-bottom: 10px;
-}
+} */
