--- a/src/styles/dashBoard.css
+++ b/src/styles/dashBoard.css
@@ -1,14 +1,4 @@
-.dashboard-summary-row {
-  display: flex;
-  justify-content: center;
-  gap: 40px; /* space between columns */
-  margin-bottom: 24px;
-}
-
-.dashboard-summary-col {
-  flex: 1;
-  text-align: center;
-}
-.text-center {
-  text-align: center;
-}
+/* .badgeCard {
+  width: 300px;
+  height: 100px;
+} */
