--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -83,7 +83,8 @@
 
   .sidebar nav ul li button {
     font-size: 1.2rem;
-    padding: 0.5rem;
+    text-align: center;
+    padding: 0;
     border-radius: 50%;
     width: 35px;
     height: 35px;
